--- a/Task-List-2/Task-List-2.csproj
+++ b/Task-List-2/Task-List-2.csproj
@@ -203,6 +203,7 @@
     <Content Include="Views\Home\TaskList.cshtml" />
     <Content Include="Views\Home\Registration.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\AddTask.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
