Added check if user session has timed and send them back to login if it has.

--- a/Task-List-2/Task-List-2.csproj
+++ b/Task-List-2/Task-List-2.csproj
@@ -204,6 +204,8 @@
     <Content Include="Views\Home\Registration.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\AddTask.cshtml" />
+    <Content Include="Views\Home\DeleteTask.cshtml" />
+    <Content Include="Views\Home\CompleteTask.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
